--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -1,14 +1,16 @@
 * { box-sizing: border-box;
 }
 
-ol, ul, li {
+ol,
+ul,
+li {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
 .container {
-  width: 80%;
+  max-width: 80%;
   margin: auto;
 }
 
@@ -19,15 +21,14 @@ ol, ul, li {
 }
 
 .site-nav {
-  float: right;
-  margin-right: -4%;
-  margin-top:-3.5%;
-  width:25%;
-}
+  padding-left: 78%;
+  width: 100%;
+  margin-top: -4%;
 
-.site-nav li {
-  display: inline;
-  margin:2%;
+}
+.site-nav ol li {
+  margin: 2%;
+  display: inline-block;
 }
 
 .site-header {
